--- a/assets/less/bootstrap-flex.less
+++ b/assets/less/bootstrap-flex.less
@@ -7,65 +7,61 @@
 
 /////////////////////////////////////////
 
-.vertical-centered {
+.flex-vertical-centered {
   .display(flex);
-  > div {
-    .align-self(center);
-  }
+  .align-items(center);
 }
 
 @media (min-width: @lg) {
-  .vertical-centered-lg {
-    .vertical-centered;
+  .flex-vertical-centered-lg {
+    .flex-vertical-centered;
   }
 }
 @media (min-width: @md) and (max-width:(@lg - 1)){
-  .vertical-centered-md {
-    .vertical-centered;
+  .flex-vertical-centered-md {
+    .flex-vertical-centered;
   }
 }
 @media (min-width: @sm) and (max-width:(@md - 1)){
-  .vertical-centered-sm {
-    .vertical-centered;
+  .flex-vertical-centered-sm {
+    .flex-vertical-centered;
   }
 }
 @media (min-width: @xs) and (max-width:(@sm - 1)){
-  .vertical-centered-xs {
-    .vertical-centered;
+  .flex-vertical-centered-xs {
+    .flex-vertical-centered;
   }
 }
 @media (min-width: @lg) {
-  .vertical-stretched-lg {
-    .vertical-centered;
+  .flex-vertical-stretched-lg {
+    .flex-vertical-centered;
   }
 }
 
 /////////////////////////////////////////
 
-.vertical-stretched {
+.flex-vertical-stretched {
   .display(flex);
-  > div {
-    .align-self(stretch);
-  }
+  .align-items(stretch);
 }
 @media (min-width: @lg) {
-  .vertical-stretched-lg {
-    .vertical-stretched;
+  .flex-vertical-stretched-lg {
+    .flex-vertical-stretched;
   }
 }
 @media (min-width: @md) and (max-width:(@lg - 1)){
-  .vertical-stretched-md {
-    .vertical-stretched;
+  .flex-vertical-stretched-md {
+    .flex-vertical-stretched;
   }
 }
 @media (min-width: @sm) and (max-width:(@md - 1)){
-  .vertical-stretched-sm {
-    .vertical-stretched;
+  .flex-vertical-stretched-sm {
+    .flex-vertical-stretched;
   }
 }
 @media (min-width: @xs) and (max-width:(@sm - 1)){
-  .vertical-stretched-xs {
-    .vertical-stretched;
+  .flex-vertical-stretched-xs {
+    .flex-vertical-stretched;
   }
 }
 
@@ -98,4 +94,31 @@
 
 .flex-column-center{
   .justify-content(center);
+}
+
+/////////////////////////////////////////
+
+.flex-row {
+  .display(flex);
+  .flex-direction(row);
+}
+@media (min-width: @lg) {
+  .flex-row-lg {
+    .flex-row;
+  }
+}
+@media (min-width: @md) and (max-width:(@lg - 1)){
+  .flex-row-md {
+    .flex-row;
+  }
+}
+@media (min-width: @sm) and (max-width:(@md - 1)){
+  .flex-row-sm {
+    .flex-row;
+  }
+}
+@media (min-width: @xs) and (max-width:(@sm - 1)){
+  .flex-row-xs {
+    .flex-row;
+  }
 }
