Update Modernizr to  version 3.3.1

--- a/assets/less/public.less
+++ b/assets/less/public.less
@@ -1,2 +1,7 @@
 @import "lesshat.less";
 @import "mixins.less";
+
+// Fix conflict between Modernizer and Bootstrap
+html.hidden {
+  display: block !important;
+}
