--- a/assets/less/public.less
+++ b/assets/less/public.less
@@ -5,3 +5,9 @@
 html.hidden {
   display: block !important;
 }
+
+.background-fixed {
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
