--- a/assets/css/public.css
+++ b/assets/css/public.css
@@ -1,3 +1,8 @@
 html.hidden {
   display: block !important;
 }
+.background-fixed {
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
