--- a/assets/less/public.less
+++ b/assets/less/public.less
@@ -1,5 +1,5 @@
-@import "lesshat.less";
-@import "mixins.less";
+// @import "lesshat.less";
+// @import "mixins.less";
 
 // Fix conflict between Modernizer and Bootstrap
 html.hidden {
