--- a/assets/less/admin.less
+++ b/assets/less/admin.less
@@ -1,1 +1,8 @@
 @import "lesshat.less";
+
+img.attachment-60x60 {
+  border: 1px solid rgba(0, 0, 0, 0.07);
+  width: 60px;
+  height: 60px;
+  display: block;
+}
