--- a/assets/less/frontend-helper.less
+++ b/assets/less/frontend-helper.less
@@ -42,11 +42,7 @@
     padding-left: 10px;
     padding-right: 10px;
   }
-  .visible-xs,
-  .visible-xxs,
-  .visible-sm,
-  .visible-md,
-  .visible-lg {
+  .bs-breakpoint > div {
     width: 50px;
   }
   .modernizr-btn {
