Update script & style versions Added npm devDependencies Cleanup

--- a/assets/less/bootstrap-variables.less
+++ b/assets/less/bootstrap-variables.less
@@ -3,12 +3,12 @@
 @lg: 992px;
 @xl: 1200px;
 
-@max-xs: ~"max-width:"(@sm - 1);
-@max-sm: ~"max-width:"(@md - 1);
-@max-md: ~"max-width:"(@lg - 1);
-@max-lg: ~"max-width:"(@xl - 1);
+@media-max-sm: ~"max-width:"(@sm - 1);
+@media-max-md: ~"max-width:"(@md - 1);
+@media-max-lg: ~"max-width:"(@lg - 1);
+@media-max-xl: ~"max-width:"(@xl - 1);
 
-@min-sm: ~"min-width:@{sm}";
-@min-md: ~"min-width:@{md}";
-@min-lg: ~"min-width:@{lg}";
-@min-xl: ~"min-width:@{xl}";
+@media-min-sm: ~"min-width:@{sm}";
+@media-min-md: ~"min-width:@{md}";
+@media-min-lg: ~"min-width:@{lg}";
+@media-min-xl: ~"min-width:@{xl}";
