--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,3 +1,9 @@
+.bg-no-available-en {
+  background: no-repeat center url(../images/not-available-en.svg);
+}
+.bg-no-available-es {
+  background: no-repeat center url(../images/not-available-es.svg);
+}
 p.description + label {
   padding-top: 14px;
 }
