--- a/assets/css/public.css
+++ b/assets/css/public.css
@@ -109,6 +109,9 @@
   width: auto;
   z-index: 100000;
 }
+img.wp-post-image {
+  max-width: 100%;
+}
 /* Bootstrap 4.x breakpoint helper */
 .bs-helper {
   position: fixed;
