Fix option nameAdd Thumbnail column setting for post types with thumbnail support Update translations

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -7,3 +7,11 @@
 p.description + label {
   padding-top: 14px;
 }
+img.attachment-60x60 {
+  width: 60px;
+  height: auto;
+}
+.thumbnail.column-thumbnail,
+.manage-column.column-thumbnail {
+  width: 70px;
+}
