--- a/src/assets/less/admin.less
+++ b/src/assets/less/admin.less
@@ -5,3 +5,15 @@ p.description {
     padding-top: 14px;
   }
 }
+
+img.attachment-60x60 {
+  width: 60px;
+  height: auto;
+}
+
+.thumbnail, 
+.manage-column {
+  &.column-thumbnail{
+    width: 70px;
+  }
+}
