--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -13,5 +13,22 @@ img.attachment-60x60 {
 }
 .thumbnail.column-thumbnail,
 .manage-column.column-thumbnail {
-  width: 70px;
+  width: 63px;
+}
+.featured.column-featured,
+.manage-column.column-featured {
+  width: 22px;
+}
+.featured.column-featured a,
+.manage-column.column-featured a {
+  cursor: pointer;
+}
+.featured.column-featured a:focus,
+.manage-column.column-featured a:focus {
+  box-shadow: none;
+}
+.featured.column-featured .spinner,
+.manage-column.column-featured .spinner {
+  float: none;
+  margin: auto;
 }
