--- a/src/assets/less/admin.less
+++ b/src/assets/less/admin.less
@@ -14,6 +14,23 @@ img.attachment-60x60 {
 .thumbnail, 
 .manage-column {
   &.column-thumbnail{
-    width: 70px;
+    width: 63px;
+  }
+}
+
+.featured, 
+.manage-column {
+  &.column-featured{
+    a {
+      cursor: pointer;
+      &:focus {
+        box-shadow: none;
+      }
+    }
+    .spinner {
+      float: none;
+      margin: auto;
+    }
+    width: 22px;
   }
 }
